Adding spell exceptions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "astrojs",
         "covid",
+        "damianaldair",
         "Guatiní",
         "Rediseño",
         "sintácticamente"
