--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
+        "agroproductividad",
         "astrojs",
         "covid",
         "damianaldair",
         "Guatiní",
+        "Hikvision",
         "Rediseño",
-        "sintácticamente"
+        "sintácticamente",
+        "Teco"
     ]
 }
